--- a/Periodic_Table_Application_Report.html
+++ b/Periodic_Table_Application_Report.html
@@ -810,5 +810,23 @@ function showError(message) {
             Generated: July 17, 2025
         </p>
     </div>
+    
+    <footer style="margin-top: 40px; padding: 20px; border-top: 2px solid #3498db; background: #f8f9fa;">
+        <h3 style="color: #2c3e50; margin-bottom: 15px;">Developer Information</h3>
+        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+            <div style="flex: 1; min-width: 250px;">
+                <p style="margin: 5px 0; font-size: 1.1em;"><strong>Developer:</strong> Omkar Lalla</p>
+                <p style="margin: 5px 0;"><strong>Contact:</strong> +91 9529067642</p>
+                <p style="margin: 5px 0;"><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/omkar-nitin-lalla" target="_blank" style="color: #0077b5; text-decoration: none;">linkedin.com/in/omkar-nitin-lalla</a></p>
+            </div>
+            <div style="flex: 1; min-width: 250px; text-align: right;">
+                <p style="margin: 5px 0; font-size: 0.9em; color: #666;">
+                    Modern Periodic Table Chemistry Application<br>
+                    Technical Report & Documentation<br>
+                    Version 2.0 (AI-Enhanced)
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
